--- a/thesis/include/chapter2.tex
+++ b/thesis/include/chapter2.tex
@@ -1,5 +1,5 @@
 \chapter{Background}
-The following chapter provides the background information and defines the important terminology that is useful to understand our work. \cite{KaRaHuKa2008}
+The following chapter provides the background information and defines the important terminology that is useful to understand our work.
 
 \section{Terminology}
 Certain terms in our area of research can be used with different meanings, therefore we first need to state that this thesis will be using the definitions provided by Prasad et al. \cite{prasad} in their paper "Bandwidth estimation: metrics, measurement, techniques and tools", as it appears to be more widespread and accepted.
@@ -37,4 +37,5 @@ https://datatracker.ietf.org/doc/html/rfc792
 \section{Raw Sockets}
 https://www.binarytides.com/raw-sockets-c-code-linux/
 
-
+\section{Capacity Estimation}
+general explanation
