--- a/thesis/include/chapter3.tex
+++ b/thesis/include/chapter3.tex
@@ -1,7 +1,5 @@
 \chapter{Related Work}
 
-\section{Capacity Estimation}
-
 \section{Existing Approaches}
 Active vs Passive
 End-to-End vs Hop-by-hop
@@ -10,6 +8,6 @@ End-to-End vs Hop-by-hop
 
 \subsection*{Packet Pair/Train Probing}
 
-\section{Iperf}
+\subsection*{Iperf}
 
-\section{Implementation of PPrate by Brzoza}
+\subsection*{Implementation of PPrate by Brzoza}
