--- a/thesis/include/chapter6.tex
+++ b/thesis/include/chapter6.tex
@@ -1,15 +1,8 @@
-\chapter{Evaluation}
+\chapter{Conclusion}
 
-\section{Packet Size}
+\section{Evaluation Results}
+Sum up whether this method can actually be used in practice
+\section{Answers to the Research Questions}
 
-\section{Intrusion}
-
-\section{Cross-Traffic}
-
-\section{Packet Loss}
-
-\section{ICMP Rate Limiting}
-
-\section{Estimation Error}
-
-\section{Data Replication}
+\section{Future Work}
+Real network measurements
