--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -2,9 +2,11 @@
 
 % Include common packages
 \usepackage{packages/packages}
-
+\usepackage{listings}
 \usepackage{xr}
 \externaldocument{include/bibliography}
+
+\graphicspath{ {./images/} }
 
 
 % IEEE tools for tweaking bib style
@@ -85,7 +87,7 @@
 \supervisor{\NEThead}
 \advisor{Prof.~Dr.-Ing.~Georg~Carle}
 \assistants{Simon Bauer\tlc{}~M.\,Sc.,%
-Benedikt~J\"ager\tlc{}~M.\,Sc.}
+Benedikt~Jaeger\tlc{}~M.\,Sc.}
 
 % in case of bachelor's/master's thesis use your own field of study
 %\courseofstudy{Informatik}
@@ -97,7 +99,7 @@ Benedikt~J\"ager\tlc{}~M.\,Sc.}
 %\courseofstudy{Elektrotechnik}
 %\courseofstudy{Electrical Engineering}
 
-\date{September 15, 2021}
+\date{November 15, 2021}
 \location{Garching}
 
 \setcounter{tocdepth}{2}
@@ -161,8 +163,6 @@ Benedikt~J\"ager\tlc{}~M.\,Sc.}
 \input{include/chapter5}
 
 \input{include/chapter6}
-
-\input{include/chapter7}
 
 
 
