--- a/thesis/bib/litnew.bib
+++ b/thesis/bib/litnew.bib
@@ -61,6 +61,39 @@
 @STRING{ieee_wts= {{\sc{IEEE}} Wireless Telecommunications Symposium (\sc{WTS})} }
 
 
+@MastersThesis{	  Brzoza,
+  author	= {Brzoza, Patryk},
+  title		= {Implementation and {E}valuation of Passive Capacity Estimation},
+  school	= TUM,
+  year		= 2019,
+  type		= {B.Sc. Thesis},
+  address	= {Munich, Germany},
+}
+
+
+@misc{mnHome,
+  title = {{Mininet Home}},
+  howpublished = "\url{http://mininet.org//}",
+  note = "[Online; accessed 2021]"
+}
+
+@misc{mnInstall,
+  title = {{Mininet Installation}},
+  howpublished = "\url{http://mininet.org/download//}",
+  note = "[Online; accessed 11.2021]"
+}
+
+
+
+
+@misc{bworld,
+  author = {Ingo Lütkebohle},
+  title = {{BWorld Robot Control Software}},
+  howpublished = "\url{http://aiweb.techfak.uni-bielefeld.de/content/bworld-robot-control-software/}",
+  year = {2008}, 
+  note = "[Online; accessed 19-July-2008]"
+}
+
 @InProceedings{	  JuPeSi2003,
   author	= {Jun, Jangeun and Peddabachagari, Pushkin and Sichitiu,
 		  Mihail},
@@ -86,19 +119,6 @@
   address	= {Los Angeles, CA, USA}
 }
 
-@Article{	  McAnBaPa2008,
-  author	= {McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and
-		  Parulkar, Guru and Peterson, Larry and Rexford, Jennifer an
-		  Shenker, Scott and Turner, Jonathan},
-  title		= {openflow: {E}nabling {I}nnovation in {C}ampus
-		  {N}etworks},
-  journal	= sigcomm_j_ccr,
-  volume	= 38,
-  number	= 2,
-  year		= 2008,
-  month		= {4},
-  pages		= {69-74},
-}
 
 @Article{	  KaRaHuKa2008,
   author	= {Katti, Sachin and Rahul, Hariharan and Hu, Wenjun and
@@ -127,18 +147,6 @@
   address	= {Anaheim, USA}
 }
 
-@Article{	  VeDeKaBa2012,
-  author	= {Vestin, Jonathan and Dely, Peter and Kassler, Andreas and
-		  Bayer, Nico and Einsiedler, Hans and Peylo, Christoph},
-  title		= {{\sc*{}[Cloud]\sc{MAC}}: {T}owards {S}oftware {D}efined
-		  \sc*{WLAN}s},
-  booktitle	= sigmobile_j_ccr,
-  year		= 2012,
-  month		= {10},
-  volume	= 16,
-  number	= 4,
-  pages		= {42-45}
-}
 
 @InProceedings{	  KyVa2003,
   author	= {Kyasanur, Pradeep and Vaidya, Nitin H.},
@@ -389,98 +397,6 @@
   publisher	= {Springer Berlin Heidelberg},
 }
 
-@InProceedings{	  ChZhWa2009,
-  author	= {Chu, Xiaowen and Zhao, Kaiyong and Wang, Mea},
-  title		= {{P}ractical {R}andom {L}inear {N}etwork {C}oding on
-		  \sc*{GPU}s},
-  booktitle	= ifip_nw,
-  year		= 2009,
-  month		= {5},
-  pages		= {573-585},
-  address	= {Aachen, Germany},
-}
-
-@InProceedings{	  ShLiWa2009,
-  author	= {Shojania, Hassan and Li, Baochun and Wang, Xin},
-  title		= {{N}uclei: \sc*{GPU}-accelerated {M}any-{C}ore {N}etwork
-		  {C}oding},
-  booktitle	= ieee_infocom,
-  year		= 2009,
-  month		= {4},
-  pages		= {459-467},
-  address	= {Rio de Janeiro, Brazil},
-}
-
-@InProceedings{	  ShLi2009,
-  author	= {Shojania, Hassan and Li, Baochun},
-  title		= {{P}ushing the {E}nvelope: {E}xtreme {N}etwork {C}oding on
-		  the {GPU}},
-  booktitle	= ieee_icdcs,
-  year		= 2009,
-  month		= {6},
-  pages		= {490-499},
-  address	= {Montreal, Quebec, Canada},
-}
-
-@Article{	  PaPeLuFi2013,
-  author	= {Paramanathan, Achuthan and Pedersen, Morten Videb{\ae}k and
-		  Lucani, Daniel E. and Fitzek, Frank H. P. and Katz,
-		  Marcos},
-  title		= {{L}ean and {M}ean: {N}etwork {C}oding for {C}ommercial
-		  {D}evices},
-  journal	= ieee_m_wc,
-  volume	= 20,
-  number	= 5,
-  year		= 2013,
-  month		= {10},
-  pages		= {54-61},
-}
-
-@Article{	  HePeFiLa2008,
-  author	= {Heide, Janus and Pedersen, Morten Videb{\ae}k and Fitzek,
-		  Frank H. P. and Larsen, Torben},
-  title		= {{C}autious {V}iew on {N}etwork {C}oding -- {F}rom {T}heory
-		  to {P}ractice},
-  journal	= ieee_j_cn,
-  year		= 2008,
-  month		= {12},
-  volume	= 10,
-  number	= 4,
-  pages		= {403-411},
-}
-
-@InProceedings{	  PeHeViFi2013,
-  author	= {Pedersen, Morten Videb{\ae}k and Heide, Janus and
-		  Vingelmann, P{\'e}ter and Fitzek, Frank H. P.},
-  title		= {Network {C}oding over the $2^{32}-5$ {P}rime {F}ield},
-  booktitle	= ieee_icc,
-  year		= 2013,
-  month		= {6},
-  pages		= {2922-2927},
-  address	= {Budapest, Hungary},
-}
-
-@Article{	  Co2000,
-  author	= {Cooper, Colin},
-  title		= {{O}n the {D}istribution of {R}ank of a {R}andom {M}atrix
-		  over a {F}inite {F}ield},
-  journal	= {Random Structures \& Algorithms},
-  year		= 2000,
-  month		= {10},
-  volume	= 17,
-  number	= {3-4},
-  pages		= {197-212}
-}
-
-@InProceedings{	  Co2000-1,
-  author	= {Cooper, Colin},
-  title		= {{O}n the {D}istribution of {R}ank of a {R}andom {M}atrix
-		  over a {F}inite {F}ield},
-  booktitle	= acm_rsa,
-  year		= 2000,
-  pages		= {197-212},
-  address	= {Poznan, Poland},
-}
 
 @InProceedings{	  WaLi2006,
   author	= {Wang, Mea and Li, Baochun},
@@ -539,461 +455,6 @@
   address	= {Cambridge, MA, USA},
 }
 
-@InProceedings{	  FrLuMePa2007,
-  author	= {Fragouli, Christina and Lun, Desmond and M{\'e}dard, Muriel
-		  and Pakzad, Payam},
-  title		= {{O}n {F}eedback for {N}etwork {C}oding},
-  booktitle	= ciss,
-  year		= 2007,
-  pages		= {248-252},
-  address	= {Baltimore, MD, USA}
-}
-
-@InProceedings{	  De-CoAgBiMo2003,
-  author	= {De Couto, Douglas S. J. and Aguayo, Daniel and Bicket, John
-		  and Morris, Robert},
-  title		= {{A} {H}igh-{T}hroughput {P}ath {M}etric for {M}ulti-hop
-		  {W}ireless {R}outing},
-  booktitle	= acm_mobicom,
-  year		= 2003,
-  month		= {9},
-  pages		= {134-146},
-  address	= {San Diego, CA, USA}
-}
-
-@Article{	  De-CoAgBiMo2005,
-  author	= {De Couto, Douglas S. J. and Aguayo, Daniel and Bicket, John
-		  and Morris, Robert},
-  title		= {{A} {H}igh-{T}hroughput {P}ath {M}etric for {M}ulti-hop
-		  {W}ireless {R}outing},
-  booktitle	= acm_j_wn,
-  year		= 2005,
-  month		= {7},
-  volume	= 11,
-  number	= 4,
-  pages		= {419-434},
-  publisher	= {Kluwer Academic Publishers},
-}
-
-@InProceedings{	  SeChLaKe2007,
-  author	= {Senel, Murat and Chintalapudi, Krishna and Lal, Dhananjay
-		  and Keshavarzian, Abtin and Coyle, Edward J.},
-  title		= {{A} {K}alman {F}ilter {B}ased {L}ink {Q}uality
-		  {E}stimation {S}cheme for {W}ireless {S}ensor {N}etworks},
-  booktitle	= ieee_globecom,
-  year		= 2007,
-  month		= {11},
-  address	= {Washington, DC, USA},
-}
-
-@Article{	  WaMaS2007,
-  author	= {Wang, Yong and Martonosi, Margaret and Peh, Li-Shiuan},
-  title		= {{P}redicting {L}ink {Q}uality using {S}upervised
-		  {L}earning in {W}ireless {S}ensor {N}etworks},
-  journal	= sigmobile_j_ccr,
-  year		= 2007,
-  month		= {7},
-  pages		= {71-83},
-  volume	= 11,
-  number	= 3,
-  publisher	= {ACM},
-}
-
-@Article{	  MaLiDjCa2014,
-  author	= {Ma, Xiao and Djouadi, Seddik and Cao, Qing},
-  title		= {\sc{LIPS}: {L}ink {P}rediction as a {S}ervice for {D}ata
-		  {A}ggregation {A}pplications},
-  journal	= {Ad Hoc Networks},
-  year		= 2014,
-  month		= {8},
-  volume	= 19,
-  pages		= {43–58}
-}
-
-@InProceedings{	  JoNtAi2008,
-  author	= {Johnson, David and Ntlatlapa, Ntsibane and Aichele,
-		  Corinna},
-  title		= {{S}imple {P}ragmatic {A}pproach to {M}esh {R}outing using
-		  {BATMAN}},
-  booktitle	= ifip_wcitd,
-  year		= 2008,
-  month		= {10},
-  address	= {Pretoria, Gauteng Province, South Africa},
-}
-
-@TechReport{	  WoCu2003,
-  author	= {Woo, Alec and Culler, David E.},
-  title		= {{E}valuation of {E}fficient {L}ink {R}eliability
-		  {E}stimators for {L}ow-power {W}ireless {N}etworks},
-  institution	= {EECS Department, University of California, Berkeley},
-  number	= {UCB/CSD-03-1270},
-  year		= 2003,
-  month		= {9},
-}
-
-@InProceedings{	  ReErWeTu2011,
-  author	= {Renner, Christian and Ernst, Sebastian and Weyer, Christoph
-		  and Turau, Volker},
-  title		= {{P}rediction {A}ccuracy of {L}ink-{Q}uality {E}stimators},
-  booktitle	= ewsn,
-  year		= 2011,
-  month		= {2},
-  address	= {Bonn, Germany},
-}
-
-@Article{	  KoBa2006,
-  author	= {Koksal, Can Emre and Balakrishnan, Hari},
-  title		= {{Q}uality-{A}ware {R}outing {M}etrics for {T}ime-{V}arying
-		  {W}ireless {M}esh {N}etworks},
-  journal	= ieee_j_jsac,
-  year		= 2006,
-  month		= {11},
-  volume	= 24,
-  number	= 11,
-  pages		= {1984-1994}
-}
-
-@Article{	  TrBaM2011,
-  author	= {Trullols-Cruces, Oscar and Barcelo-Ordinas, Jose M. and
-		  Fiore, Marco},
-  title		= {{E}xact {D}ecoding {P}robability {U}nder {R}andom {L}inear
-		  {N}etwork {C}oding},
-  journal	= ieee_j_coml,
-  year		= 2011,
-  month		= {11},
-  volume	= 15,
-  number	= 1,
-  pages		= {67-69}
-}
-
-@InProceedings{	  DrBeM-AdRa2011,
-  author	= {Dreibholz, Thomas and Becke, Martin and Adhari, Hakim and
-		  Rathgeb, Erwin P},
-  title		= {{E}valuation of a new {M}ultipath {C}ongestion {C}ontrol
-		  {S}cheme using the {N}et{P}erf{M}eter {T}ool-{C}hain},
-  booktitle	= ieee_softcom,
-  year		= 2011,
-  month		= {9},
-  address	= {Adriatic Islands Split, Croatia}
-}
-
-
-@InProceedings{	  KrHaHuLu2013,
-  author	= {Krigslund, Jeppe and Hansen, Jonas and Hundeb{\o}ll, Martin
-		  and Lucani, Daniel E. and Fitzek, Frank H. P.},
-  title		= {\sc{CORE}: {\sc{COPE}} with {\sc{MORE}} in {W}ireless
-		  {M}eshed {N}etworks},
-  booktitle	= ieee_vtc,
-  year		= 2013,
-  month		= {6},
-  address	= {Dresden, Germany},
-}
-
-@InProceedings{	  AfSn2009,
-  author	= {Afanasyev, Mikhail and Snoeren, Alex C.},
-  title		= {{T}he {I}mportance of {B}eing {O}verheard: {T}hroughput
-		  {G}ains in {W}ireless {M}esh {N}etworks},
-  booktitle	= acm_imc,
-  year		= 2009,
-  month		= {11},
-  pages		= {384-396},
-  address	= {Chicago, IL, USA},
-}
-
-@InProceedings{	  WiNgEp2000,
-  author	= {Wieselthier, Jeffrey E. and Nguyen, Gam D. and Ephremides,
-		  Anthony},
-  title		= {{O}n the {C}onstruction of {E}nergy-efficient {B}roadcast
-		  and {M}ulticast {T}rees in {W}ireless {N}etworks},
-  booktitle	= ieee_infocom,
-  year		= 2000,
-  month		= {3},
-  volume	= 2,
-  pages		= {585-594},
-  address	= {Tel Aviv, Israel},
-}
-
-@InProceedings{	  KaGoKa2007,
-  author	= {Katti, Sachin and Gollakota, Shyamnath and Katabi, Dina},
-  title		= {{E}mbracing {W}ireless {I}nterference: {A}nalog {N}etwork
-		  {C}oding},
-  booktitle	= acm_sigcomm,
-  year		= 2007,
-  month		= {8},
-  pages		= {397-408},
-  address	= {Kyoto, Japan}
-}
-
-@Article{	  RaWi2007,
-  author	= {Rankov, Boris and Wittneben, Armin},
-  title		= {{S}pectral {E}fficient {P}rotocols for {H}alf-duplex
-		  {F}ading {R}elay {C}hannels},
-  journal	= ieee_j_jsac,
-  year		= 2007,
-  month		= {2},
-  volume	= 25,
-  pages		= {379-389},
-  number	= 2
-}
-
-@InProceedings{	  KhWaSh2007,
-  author	= {Khreishah, Abdallah and Wang, Chih-Chun and Shroff,
-		  Ness B.},
-  title		= {{C}apacity {R}egions for {M}ultiple {U}nicast {F}lows
-		  {U}sing {I}nter-session {N}etwork {C}oding},
-  booktitle	= eai_wicon,
-  year		= 2007,
-  address	= {Austin, TX, USA},
-}
-
-@Article{	  KaRaHuKa2006,
-  title		= {\sc*{XOR}s in the {A}ir: {P}ractical {W}ireless {N}etwork
-		  {C}oding},
-  author	= {Katti, Sachin and Rahul, Hariharan and Hu, Wenjun and
-		  Katabi, Dina and M{\'e}dard, Muriel and Crowcroft, Jon},
-  journal	= sigcomm_j_ccr,
-  year		= 2006,
-  volume	= 36,
-  number	= 4,
-  pages		= {243-254}
-}
-
-@Article{	  SuShMeJa2011,
-  title		= {{N}etwork {C}oding {M}eets {\sc{TCP}}: {T}heory and
-		  {I}mplementation},
-  author	= {Sundararajan, Jay Kumar and Shah, Devavrat and M{\'e}dard,
-		  Muriel and Jakubczak, Szymon and Mitzenmacher, Michael and
-		  Barros, Jo{\~a}o},
-  journal	= ieee_j_proc,
-  year		= 2011,
-  volume	= 99,
-  number	= 3,
-  pages		= {490-512}
-}
-
-@InProceedings{	  GhToRo2010,
-  author	= {Gheorghiu, Steluta and Toledo, Alberto L{\'o}pez and
-		  Rodriguez, Pablo},
-  title		= {{M}ultipath {\sc{TCP}} with {N}etwork {C}oding for
-		  {W}ireless {M}esh {N}etworks},
-  booktitle	= ieee_icc,
-  month		= {5},
-  year		= 2010,
-  address	= {Cape Town, Western Cape, South Africa},
-}
-
-@Article{ZhShCl1991,
-  title		= {{O}bservations on the {D}ynamics of a {C}ongestion {C}ontrol
-  		  {A}lgorithm: the {E}ffects of {T}wo-{W}ay {T}raffic},
-  author	= {Zhang, Lixia and Shenker, Scott and Clark, David D.},
-  journal	= sigcomm_j_ccr,
-  year		= 1991,
-  volume	= 21,
-  number	= 4,
-  pages		= {133-147},
-}
-
-@Article{Mo1992,
-  title		= {{O}bserving {\sc{TCP}} {D}ynamics in {R}eal {N}etworks},
-  author	= {Mogul, Jeffrey C.},
-  journal	= sigcomm_j_ccr,
-  year		= 1992,
-  month		= {10},
-  volume	= 22,
-  number	= 4,
-  pages		= {305-317},
-}
-
-@InProceedings{BaPaSeSt1998,
-  title		= {{\sc{TCP}} {B}ehavior of a {B}usy {I}nternet {S}erver:
-		  {A}nalysis and {I}mprovements},
-  author	= {Balakrishnan, Hari and Padmanabhan, Venkata N. and Seshan,
-		  Srinivasan and Stemm, Mark and Katz, Randy H.},
-  booktitle	= ieee_infocom,
-  year		= 1998,
-  pages		= {252-262},
-  address	= {San Francisco, CA, USA},
-}
-
-@Article{Ti2005,
-  title		= {{\sc{TCP}} in {W}ireless {E}nvironments: {P}roblems and
-  		  {S}olutions},
-  author	= {Tian, Ye and Xu, Kai and Ansari, Nirwan},
-  journal	= ieee_m_com,
-  year		= 2005,
-  month		= {3},
-  number	= 3,
-  volume	= 43,
-  pages		= {27-32},
-}
-
-@InProceedings{ChRa2002,
-  Title		= {{\sc{TCP/IP}} {P}erformance over {\sc{3G}} {W}ireless
-		  {L}inks with {R}ate and {D}elay {V}ariation},
-  author	= {Chan, Mun Choon and Ramjee, Ramachandran},
-  booktitle	= acm_mobicom,
-  year		= 2002,
-  pages		= {71-82},
-  address	= {Atlanta, GA, USA},
-}
-
-@Article{FuLi2003,
-  title		= {{\sc{TCP}} {V}eno: {\sc{TCP}} {E}nhancement for
-		  {T}ransmission {O}ver {W}ireless {A}ccess {N}etworks},
-  author	= {Fu, Cheng Peng and Liew, Soung C.},
-  journal	= ieee_j_jsac,
-  year		= 2003,
-  number	= 2,
-  volume	= 21,
-  pages		= {216-228},
-}
-
-@Article{WuCh2004,
-  title		= {\sc{JTCP}: {J}itter-based {\sc{TCP}} for {H}eterogeneous
-		  {W}ireless {N}etworks},
-  author	= {Wu, Eric Hsiao-Kuang and Chen, Mei-Zhen},
-  year		= 2004,
-  journal	= ieee_j_jsac,
-  number	= 4,
-  volume	= 22,
-  pages		= {757-766},
-}
-
-@InProceedings{ChRaVePr1998,
-  title		= {{A} {F}eedback-based {S}cheme for {I}mproving {\sc{TCP}}
-  		  {P}erformance in {A}d {H}oc {W}ireless {N}etworks},
-  author	= {Chandran, Kartik and Raghunathan, Sudarshan and Venkatesan,
-		  Subbarayan and Prakash, Ravi},
-  booktitle	= ieee_icdcs,
-  year		= 1998,
-  address	= {Washington, DC, USA},
-}
-
-@Inproceedings{MaCaGeSa2001,
-  title		= {{\sc{TCP}} {W}estwood: {B}andwidth {E}stimation for
-		  {E}nhanced {T}ransport over {W}ireless {L}inks},
-  author	= {Mascolo, Saverio and Casetti, Claudio and Gerla, Mario and
-		  Sanadidi, Medy Y. and Wang, Ren},
-  booktitle	= acm_mobicom,
-  year		= 2001,
-  pages		= {287-297},
-  address	= {Rome, Italy},
-}
-
-@Article{BaPaKa1999,
-  title		= {{T}he {E}ffects of {A}symmetry on {\sc{TCP}} {P}erformance},
-  author	= {Balakrishnan, Hari and Padmanabhan, Venkata N. and Katz,
-		  Randy H.},
-  journal	= {{Mobile Networks and Applications}},
-  year		= 1999,
-  volume	= 4,
-  number	= 3,
-  pages		= {219-241},
-  publisher	= {Springer},
-}
-
-@InProceedings{SuShMeMi2009,
-  title		= {{N}etwork {C}oding meets {\sc{TCP}}},
-  author	= {Sundararajan, Jay Kumar and Shah, Devavrat and M{\'e}dard,
-		  Muriel and Mitzenmacher, Michael and Barros, Jo{\~a}o},
-  booktitle	= ieee_infocom,
-  year		= 2009,
-  pages		= {280-288},
-}
-
-@Article{ClDoLeMe2014,
-  author	= {Cloud, Jason and Leith, Douglas and M{\'e}dard, Muriel},
-  title		= {{I}n-order {D}elivery {D}elay of {T}ransport {L}ayer
-		  {C}oding},
-  journal	= {CoRR},
-  year		= 2014,
-}
-
-
-@InProceedings{LiLiLi2010,
-  title		= {\sc{SlideOR}: {O}nline {O}pportunistic {N}etwork {C}oding
-  		  in {W}ireless {M}esh {N}etworks},
-  author	= {Lin, Yunfeng and Liang, Ben and Li, Baochun},
-  booktitle	= ieee_infocom,
-  year		= 2010,
-  month		= {3},
-}
-
-@Article{Knuth1993,
-  title      = {{J}ohann {F}aulhaber and {S}ums of {P}owers},
-  author     = {Knuth, Donald Ervin},
-  year       = 1993,
-  month      = {7},
-  journal    = {Mathematics of Computation},
-  volume     = 61,
-  number     = 203,
-  pages      = {277-294},
-}
-
-@Article{MiMoOg2004,
-  title      = {{H}ow much does a {M}atrix of {R}ank $k$ weigh?},
-  author     = {Migler, Theresa and Mirrison, Kent E. and Ogle, Mitchell},
-  journal    = {Mathematics Magazine},
-  year       = 2004,
-  month      = {3},
-  pages      = {262-271},
-  volume     = 79,
-}
-
-@article{KaKaBaHaMe2008,
-  author     = {Katti, Sachin and Katabi, Dina and Balakrishnan, Hari and
-                M{\'e}dard, Muriel},
-  title      = {{S}ymbol-level {N}etwork {C}oding for {W}ireless {M}esh
-                {N}etworks},
-  journal    = sigcomm_j_ccr,
-  volume     = 38,
-  number     = 4,
-  month      = {8},
-  year       = {2008},
-  pages      = {401-412},
-}
-
-@InProceedings{ScSoGe2007,
-  author     = {Luca Scalia and Fabio Soldo and Mario Gerla},
-  title      = {{\sc{}[PiggyCode]}: {A} {\sc{MAC}} {L}ayer {N}etwork {C}oding
-                {S}cheme to {I}mprove {\sc{TCP}} {P}erformance {O} {W}ireless
-                {N}etworks},
-  booktitle  = ieee_globecom,
-  month      = {11},
-  year       = {2007},
-  address    = {Washington, DC, USA},
-}
-
-@InProceedings{GkRo2005,
-  author       = {Christos Gkantsidis and Pablo Rodriguez},
-  title        = {{N}etwork {C}oding for {L}arge {S}cale {C}ontent
-                  {D}istribution},
-  institution  = {Microsoft Research},
-  booktitle    = ieee_infocom,
-  month        = {3},
-  year         = {2005},
-  address      = {Miami, FL, USA},
-}
-
-@InProceedings{GkRo2006,
-  author       = {Christos Gkantsidis and John Miller and Pablo Rodriguez},
-  title        = {{A}natomy of a {\sc{P2P}} {C}ontent {D}istribution {S}ystem
-                  with {N}etwork {C}oding},
-  booktitle    = {International Workshop on Peer-to-Peer Systems (IPTPS)},
-  month        = {2},
-  year         = {2006},
-  address      = {Santa Barbara, CA, USA},
-}
-
-@InProceedings{GkMiRo2006,
-  author       = {Christos Gkantsidis and John Miller and Pablo Rodriguez},
-  title        = {{C}omprehensive {V}iew of a {L}ive {N}etwork {C}oding
-                  {\sc{P2P}} {S}ystem},
-  booktitle    = acm_imc,
-  month        = {10},
-  year         = {2006},
-  address      = {Rio de Janeiro, Brazil},
-}
 
 @InProceedings{ShJo2009,
   author       = {Brooke Shrader and Nathaniel M. Jones},
