--- a/thesis/include/chapter2.tex
+++ b/thesis/include/chapter2.tex
@@ -28,14 +28,22 @@ The transmission time for an IP packet of size bytes is
 \subsection*{Available Bandwidth}
 Another important metric is the available bandwidth of a link or end-to-end path. The available bandwidth of a link relates to the unused, or “spare”, capacity of the link during a certain time period. So even though the capacity of a link depends on the underlying transmission technology and propagation medium, the available bandwidth of a link additionally depends on the traffic load at that link, and is typically a time-varying metric.
 
+\section{OSI Model}
+
 \section{TCP}
 https://datatracker.ietf.org/doc/html/rfc793
 
 \section{ICMP}
 https://datatracker.ietf.org/doc/html/rfc792
 
-\section{Raw Sockets}
+\section{Traffic Generation}
+
+\subsection*{iPerf}
+
+\subsection*{Raw Sockets}
 https://www.binarytides.com/raw-sockets-c-code-linux/
+
+\url{https://www.wireshark.org/docs/man-pages/tshark.html}
 
 \section{Capacity Estimation}
 general explanation
