--- a/thesis/include/chapter3.tex
+++ b/thesis/include/chapter3.tex
@@ -8,6 +8,4 @@ End-to-End vs Hop-by-hop
 
 \subsection*{Packet Pair/Train Probing}
 
-\subsection*{Iperf}
-
-\subsection*{Implementation of PPrate by Brzoza}
+\subsection*{PPrate}
