--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -175,6 +175,7 @@ Benedikt~Jaeger\tlc{}~M.\,Sc.}
 \pagestyle{thesischapter}
 
 \cleardoublepage
+\selectlanguage{english}
 \printbibliography[heading=bibintoc]
 %\input{include/bibliography}
 
