--- a/thesis/include/chapter6.tex
+++ b/thesis/include/chapter6.tex
@@ -22,4 +22,6 @@ After the careful and thorough research we can already answer the questions we w
 \end{itemize}
 
 \section{Future Work}
-Real network measurements
+As our evaluation has shown, there is a lot of room for improvement for our methodology.\\
+First and foremost, we have not conducted any test runs on a real network, which can be done in order to see how our tool handles the real traffic in the Internet.\\
+Moreover, further research is required to handle the inaccuracy problem with cross-traffic as it is the key factor when it comes to the real-life usage of our framework.\\
